--- a/public/userStatic/css/style.css
+++ b/public/userStatic/css/style.css
@@ -168,7 +168,11 @@ section .section-title {
 #footer ul.quick-links li:hover a i {
     font-weight: 700;
 }
-
+.acnt_logo{
+    height:50px;
+    width: 50px;
+    border-radius:50%;
+}
 @media (max-width:767px){
 	#footer h5 {
     padding-left: 0;
